--- a/Application/iSynaptic.Commons.Ninject/iSynaptic.Commons.Ninject.csproj
+++ b/Application/iSynaptic.Commons.Ninject/iSynaptic.Commons.Ninject.csproj
@@ -52,6 +52,9 @@
       <Name>iSynaptic.Commons</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Planning\Strategies\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
