Moved extension methods to into namespaces to line up more with the types they extend...

--- a/Application/iSynaptic.Commons/iSynaptic.Commons.csproj
+++ b/Application/iSynaptic.Commons/iSynaptic.Commons.csproj
@@ -61,22 +61,22 @@
     <Compile Include="Diagnostics\ILoggerContextSerializer.cs" />
     <Compile Include="Diagnostics\LoggerExtensions.cs" />
     <Compile Include="Diagnostics\LogLevel.cs" />
-    <Compile Include="Extensions\ActionExtensions.cs" />
-    <Compile Include="Extensions\DictionaryExtensions.cs" />
-    <Compile Include="Extensions\DynamicMethodExtensions.cs" />
-    <Compile Include="Extensions\EnumerableExtensions.cs" />
-    <Compile Include="Extensions\EnumExtensions.cs" />
-    <Compile Include="Extensions\FuncExtensions.cs" />
-    <Compile Include="Extensions\IndexedValue.cs" />
-    <Compile Include="Extensions\CollectionExtensions.cs" />
-    <Compile Include="Extensions\IPipelinedEnumerable.cs" />
-    <Compile Include="Extensions\LookAheadableValue.cs" />
-    <Compile Include="Extensions\LookAheadEnumerable.cs" />
-    <Compile Include="Extensions\LookAheadEnumerator.cs" />
-    <Compile Include="Extensions\MethodInfoExtensions.cs" />
-    <Compile Include="Extensions\ObjectExtensions\MethodReflectionObjectExtensions.cs" />
-    <Compile Include="Extensions\PredicateExtensions.cs" />
-    <Compile Include="Extensions\ReflectionExtensions.cs" />
+    <Compile Include="ActionExtensions.cs" />
+    <Compile Include="Collections\Generic\DictionaryExtensions.cs" />
+    <Compile Include="Reflection\Emit\DynamicMethodExtensions.cs" />
+    <Compile Include="Collections\Generic\EnumerableExtensions.cs" />
+    <Compile Include="EnumExtensions.cs" />
+    <Compile Include="FuncExtensions.cs" />
+    <Compile Include="Collections\Generic\IndexedValue.cs" />
+    <Compile Include="Collections\Generic\CollectionExtensions.cs" />
+    <Compile Include="Collections\Generic\IPipelinedEnumerable.cs" />
+    <Compile Include="Collections\Generic\LookAheadableValue.cs" />
+    <Compile Include="Collections\Generic\LookAheadEnumerable.cs" />
+    <Compile Include="Collections\Generic\LookAheadEnumerator.cs" />
+    <Compile Include="Reflection\MethodInfoExtensions.cs" />
+    <Compile Include="MethodReflectionObjectExtensions.cs" />
+    <Compile Include="PredicateExtensions.cs" />
+    <Compile Include="Reflection\ReflectionExtensions.cs" />
     <Compile Include="IDependencyResolver.cs" />
     <Compile Include="IIdentifiable.cs" />
     <Compile Include="IKnownQualifiers.cs" />
