--- a/Testing/iSynaptic.Commons.UnitTests/iSynaptic.Commons.UnitTests.csproj
+++ b/Testing/iSynaptic.Commons.UnitTests/iSynaptic.Commons.UnitTests.csproj
@@ -75,7 +75,8 @@
     <Compile Include="PredicateExtensionsTests.cs" />
     <Compile Include="IocTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Runtime\Serialization\CloneableTests.cs" />
+    <Compile Include="Runtime\Serialization\Cloneable.ClrPrimitiveTests.cs" />
+    <Compile Include="Runtime\Serialization\Cloneable.GeneralTests.cs" />
     <Compile Include="SpecificationTests.cs" />
     <Compile Include="Text\Parsing\ScanningTextReaderTests.cs" />
     <Compile Include="Text\Parsing\SimpleScannerTests.cs" />
@@ -98,6 +99,10 @@
       <Project>{8F6C6021-0517-4033-B7DA-A07DD0112FC6}</Project>
       <Name>iSynaptic.Commons</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="Runtime\Serialization\Cloneable.CollectionTests.cs" />
+    <Compile Include="Runtime\Serialization\Cloneable.TestClasses.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
