--- a/Application/iSynaptic.Commons/iSynaptic.Commons.csproj
+++ b/Application/iSynaptic.Commons/iSynaptic.Commons.csproj
@@ -64,10 +64,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AOP\DisposableContext.cs" />
+    <Compile Include="AOP\IEnlistmentScope.cs" />
     <Compile Include="AOP\IUnitOfWork.cs" />
-    <Compile Include="AOP\NestableScope.cs" />
+    <Compile Include="AOP\EnlistmentScope.cs" />
     <Compile Include="AOP\Scope.cs" />
     <Compile Include="AOP\ScopeBounds.cs" />
+    <Compile Include="AOP\ScopeNesting.cs" />
     <Compile Include="AOP\UnitOfWork.cs" />
     <Compile Include="ArrayIndex.cs" />
     <Compile Include="Collections\Generic\ReadOnlyDictionary.cs" />
