--- a/Application/iSynaptic.Commons.Testing/iSynaptic.Commons.Testing.csproj
+++ b/Application/iSynaptic.Commons.Testing/iSynaptic.Commons.Testing.csproj
@@ -77,6 +77,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\CommonAssemblyInfo.cs">
+      <Link>Properties\CommonAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="BaseTestFixture.cs" />
     <Compile Include="ITestBehavior.cs" />
     <Compile Include="ITestFixtureBehavior.cs" />
