--- a/Application/iSynaptic.Commons/iSynaptic.Commons.csproj
+++ b/Application/iSynaptic.Commons/iSynaptic.Commons.csproj
@@ -63,6 +63,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\CommonAssemblyInfo.cs">
+      <Link>Properties\CommonAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="AOP\DisposableContext.cs" />
     <Compile Include="AOP\IEnlistmentScope.cs" />
     <Compile Include="AOP\IUnitOfWork.cs" />
