Implemented entry point to metadata query services...

--- a/Testing/iSynaptic.Commons.UnitTests/iSynaptic.Commons.UnitTests.csproj
+++ b/Testing/iSynaptic.Commons.UnitTests/iSynaptic.Commons.UnitTests.csproj
@@ -81,6 +81,9 @@
     <Compile Include="Collections\Generic\ReadOnlyDictionaryTests.cs" />
     <Compile Include="AggregateExceptionTests.cs" />
     <Compile Include="DataEventArgsTests.cs" />
+    <Compile Include="Data\MetadataDeclarationTests.cs" />
+    <Compile Include="Data\MetadataTests.cs" />
+    <Compile Include="Data\NonGenericIntegerMetadataDeclaration.cs" />
     <Compile Include="DependencyResolverTests.cs" />
     <Compile Include="Diagnostics\LoggerExtensionsTests.cs" />
     <Compile Include="ActionExtensionsTests.cs" />
