--- a/Application/iSynaptic.Commons/iSynaptic.Commons.csproj
+++ b/Application/iSynaptic.Commons/iSynaptic.Commons.csproj
@@ -79,9 +79,11 @@
     <Compile Include="Collections\Generic\ReadOnlyDictionary.cs" />
     <Compile Include="AggregateException.cs" />
     <Compile Include="DataEventArgs.cs" />
+    <Compile Include="Data\IMetadataDeclaration.cs" />
     <Compile Include="Data\IMetadataResolver.cs" />
     <Compile Include="Data\Metadata.cs" />
     <Compile Include="Data\MetadataDeclaration.cs" />
+    <Compile Include="Data\MetadataExtensions.cs" />
     <Compile Include="DependencyResolver.cs" />
     <Compile Include="Diagnostics\ILogger.cs" />
     <Compile Include="Diagnostics\ILoggerContextSerializer.cs" />
