--- a/Application/iSynaptic.Commons.Data/iSynaptic.Commons.Data.csproj
+++ b/Application/iSynaptic.Commons.Data/iSynaptic.Commons.Data.csproj
@@ -40,6 +40,8 @@
     <Compile Include="..\..\CommonAssemblyInfo.cs">
       <Link>Properties\CommonAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="AttributeMetadataBindingSource.cs" />
+    <Compile Include="IMetadataAttribute.cs" />
     <Compile Include="IMetadataBinding.cs" />
     <Compile Include="IMetadataBindingSource.cs" />
     <Compile Include="MetadataBinding.cs" />
