--- a/External/Tools/SolutionBuild.targets
+++ b/External/Tools/SolutionBuild.targets
@@ -1,134 +1,96 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <Project DefaultTargets="BuildComplete" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <PropertyGroup>
-    <SatisfactoryCodeCoverage>95</SatisfactoryCodeCoverage>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
+    <PropertyGroup>
+        <SatisfactoryCodeCoverage>95</SatisfactoryCodeCoverage>
+        <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+        <DebugSymbols>true</DebugSymbols>
+        <DebugType>full</DebugType>
 
-    <Configuration>Release</Configuration>
+        <Configuration>Release</Configuration>
 
-    <RootBuildPath>$(MSBuildProjectDirectory)\Build</RootBuildPath>
-    <BinariesPath>$(RootBuildPath)\$(Configuration)\Binaries</BinariesPath>
-    <MetadataPath>$(RootBuildPath)\$(Configuration)\Metadata</MetadataPath>
-    <ReportingPath>$(RootBuildPath)\$(Configuration)\Reporting</ReportingPath>
+        <RootBuildPath>$(MSBuildProjectDirectory)\Build</RootBuildPath>
+        <BinariesPath>$(RootBuildPath)\$(Configuration)\Binaries</BinariesPath>
+        <MetadataPath>$(RootBuildPath)\$(Configuration)\Metadata</MetadataPath>
+        <ReportingPath>$(RootBuildPath)\$(Configuration)\Reporting</ReportingPath>
 
-    <ExternalPath>$(MSBuildProjectDirectory)\External</ExternalPath>
-    <ExternalReferencesPath>$(ExternalPath)\References</ExternalReferencesPath>
-    <ExternalToolsPath>$(ExternalPath)\Tools</ExternalToolsPath>
+        <ExternalPath>$(MSBuildProjectDirectory)\External</ExternalPath>
+        <ExternalReferencesPath>$(ExternalPath)\References</ExternalReferencesPath>
+        <ExternalToolsPath>$(ExternalPath)\Tools</ExternalToolsPath>
 
-    <MSBuildCommunityTasksPath>$(ExternalToolsPath)\MSBuildCommunityTasks</MSBuildCommunityTasksPath>
-    <NCoverExplorerExtras>$(ExternalToolsPath)\NCoverExplorerExtras</NCoverExplorerExtras>
+        <MSBuildCommunityTasksPath>$(ExternalToolsPath)\MSBuildCommunityTasks</MSBuildCommunityTasksPath>
 
-    <NUnitPath>$(ExternalToolsPath)\NUnit</NUnitPath>
-    <MbUnitPath>$(ExternalToolsPath)\MbUnit</MbUnitPath>
+        <NUnitPath>$(ExternalToolsPath)\NUnit</NUnitPath>
 
-    <TestingFramework Condition="$(TestingFramework) == ''">NUnit</TestingFramework>
-    <TestingOutputFileName>UnitTestResults</TestingOutputFileName>
+        <TestingFramework Condition="$(TestingFramework) == ''">NUnit</TestingFramework>
+        <TestingOutputFileName>UnitTestResults</TestingOutputFileName>
+    </PropertyGroup>
 
-    <NCoverPath>$(ExternalToolsPath)\NCover</NCoverPath>
-    <NCoverExplorerPath>$(ExternalToolsPath)\NCoverExplorer</NCoverExplorerPath>
-  </PropertyGroup>
+    <Import Project="$(ExternalToolsPath)\MSBuildCommunityTasks\MSBuild.Community.Tasks.Targets" />
 
-  <ItemGroup>
-    <ReportingFile Include="CodeCoverageSummary.html" />
-    <ReportingFile Include="CodeCoverage.log" />
-    <ReportingFile Include="CodeCoverage.xml" />
-    <ReportingFile Include="CodeCoverageSummary.xml" />
-    <ReportingFile Include="CoverageReport.xsl" />
-  </ItemGroup>
+    <Target Name="Clean">
+        <Delete Files="$(RootBuildPath)\**" ContinueOnError="false" />
 
-  <Import Project="$(ExternalToolsPath)\MSBuildCommunityTasks\MSBuild.Community.Tasks.Targets" />
-  <Import Project="$(NCoverExplorerExtras)\NCoverExplorer.MSBuildTasks.targets" />
+        <RemoveDir Directories="$(RootBuildPath)" ContinueOnError="false" />
+        <RemoveDir Directories="%(ApplicationProject.RelativeDir)bin;%(ApplicationProject.RelativeDir)obj" ContinueOnError="false" />
+        <RemoveDir Directories="%(TestingProject.RelativeDir)bin;%(TestingProject.RelativeDir)obj" ContinueOnError="false" />
+    </Target>
 
-  <Target Name="Clean">
-    <Delete Files="$(RootBuildPath)\**" ContinueOnError="false" />
+    <Target Name="Build" DependsOnTargets="Clean">
+        <MakeDir Directories="$(RootBuildPath);$(BinariesPath)" />
 
-    <RemoveDir Directories="$(RootBuildPath)" ContinueOnError="false" />
-    <RemoveDir Directories="%(ApplicationProject.RelativeDir)bin;%(ApplicationProject.RelativeDir)obj" ContinueOnError="false" />
-    <RemoveDir Directories="%(TestingProject.RelativeDir)bin;%(TestingProject.RelativeDir)obj" ContinueOnError="false" />
-  </Target>
+        <MSBuild
+                    Projects="@(ApplicationProject)"
+                    Properties="OutputPath=$(BinariesPath);Configuration=$(Configuration);TreatWarningsAsErrors=$(TreatWarningsAsErrors);DebugSymbols=$(DebugSymbols);DebugType=$(DebugType)"
+            Targets="Build">
 
-  <Target Name="Build" DependsOnTargets="Clean">
-    <MakeDir Directories="$(RootBuildPath);$(BinariesPath)" />
+            <Output ItemName="ApplicationAssembly" TaskParameter="TargetOutputs" />
+        </MSBuild>
 
-    <MSBuild
-				Projects="@(ApplicationProject)"
-				Properties="OutputPath=$(BinariesPath);Configuration=$(Configuration);TreatWarningsAsErrors=$(TreatWarningsAsErrors);DebugSymbols=$(DebugSymbols);DebugType=$(DebugType)"
-        Targets="Build">
+        <MSBuild
+            Projects="@(TestingProject)"
+            Properties="OutputPath=$(BinariesPath);Configuration=$(Configuration);TreatWarningsAsErrors=$(TreatWarningsAsErrors);DebugSymbols=$(DebugSymbols);DebugType=$(DebugType)"
+            Targets="Build">
 
-      <Output ItemName="ApplicationAssembly" TaskParameter="TargetOutputs" />
-    </MSBuild>
+            <Output ItemName="TestingAssembly" TaskParameter="TargetOutputs" />
+        </MSBuild>
+    </Target>
 
-    <MSBuild
-        Projects="@(TestingProject)"
-        Properties="OutputPath=$(BinariesPath);Configuration=$(Configuration);TreatWarningsAsErrors=$(TreatWarningsAsErrors);DebugSymbols=$(DebugSymbols);DebugType=$(DebugType)"
-        Targets="Build">
+    <Target Name="UnitTest" DependsOnTargets="Build">
+        <Error Text="Unrecognized Testing Framework." Condition="$(TestingFramework) != 'NUnit' And $(TestingFramework) != 'MbUnit'" />
 
-      <Output ItemName="TestingAssembly" TaskParameter="TargetOutputs" />
-    </MSBuild>
-  </Target>
+        <Exec WorkingDirectory="$(BinariesPath)"
+              Command="&quot;$(NUnitPath)\nunit-console.exe&quot; /process=Single /framework=v4.0.30319 @(TestingAssembly -> '&quot;$(BinariesPath)\%(Filename)%(Extension)&quot;') /xml=&quot;$(RootBuildPath)\$(Configuration)\$(TestingOutputFileName).xml&quot;" />
+        
+        <!--NCover
+          Condition="$(TestingFramework) == 'NUnit'"
+                ToolPath="$(NCoverPath)"
+                CommandLineExe="$(NUnitPath)\nunit-console.exe"
+                CommandLineArgs=" /framework=v4.0.30319 @(TestingAssembly -> '&quot;$(BinariesPath)\%(Filename)%(Extension)&quot;') /xml=&quot;$(RootBuildPath)\$(Configuration)\$(TestingOutputFileName).xml&quot;"
+                CoverageFile="$(RootBuildPath)\$(Configuration)\CodeCoverage.xml"
+                LogFile="$(RootBuildPath)\$(Configuration)\CodeCoverage.log"
+                WorkingDirectory="$(BinariesPath)"
+                Assemblies="@(ApplicationAssembly)" / -->
 
-  <Target Name="UnitTest" DependsOnTargets="Build">
-    <Error Text="Unrecognized Testing Framework." Condition="$(TestingFramework) != 'NUnit' And $(TestingFramework) != 'MbUnit'" />
 
-    <NCover
-      Condition="$(TestingFramework) == 'NUnit'"
-			ToolPath="$(NCoverPath)"
-			CommandLineExe="$(NUnitPath)\nunit-console.exe"
-			CommandLineArgs="@(TestingAssembly -> '&quot;$(BinariesPath)\%(Filename)%(Extension)&quot;') /xml=&quot;$(RootBuildPath)\$(Configuration)\$(TestingOutputFileName).xml&quot;"
-			CoverageFile="$(RootBuildPath)\$(Configuration)\CodeCoverage.xml"
-			LogFile="$(RootBuildPath)\$(Configuration)\CodeCoverage.log"
-			WorkingDirectory="$(BinariesPath)"
-			Assemblies="@(ApplicationAssembly)" />
+        <CreateItem Include="$(TestingOutputFileName).xml">
+            <Output TaskParameter="Include" ItemName="ReportingFile" />
+        </CreateItem>
+    </Target>
 
-    <NCover
-      Condition="$(TestingFramework) == 'MbUnit'"
-			ToolPath="$(NCoverPath)"
-			CommandLineExe="$(MBUnitPath)\MbUnit.Cons.exe"
-			CommandLineArgs="@(TestingAssembly -> '&quot;$(BinariesPath)\%(Filename)%(Extension)&quot;', ' ') /report-type:Xml /report-name-format:$(TestingOutputFileName) /report-folder:&quot;$(RootBuildPath)\$(Configuration)&quot;"
-			CoverageFile="$(RootBuildPath)\$(Configuration)\CodeCoverage.xml"
-			LogFile="$(RootBuildPath)\$(Configuration)\CodeCoverage.log"
-			WorkingDirectory="$(BinariesPath)"
-			Assemblies="@(ApplicationAssembly)" />
+    <Target Name="LayoutOutputFiles">
+        <CreateItem Include="$(BinariesPath)\*.pdb;$(BinariesPath)\*.xml">
+            <Output TaskParameter="Include" ItemName ="MetadataFile" />
+        </CreateItem>
 
-    <CreateItem Include="$(TestingOutputFileName).xml">
-      <Output TaskParameter="Include" ItemName="ReportingFile" />
-    </CreateItem>
-  </Target>
+        <MakeDir Directories="$(MetadataPath);$(ReportingPath)" />
 
-  <Target Name="ValidateCodeCoverage" DependsOnTargets="UnitTest" >
-    <NCoverExplorer
-      ToolPath="$(NCoverExplorerPath)"
-      ProjectName="$(SolutionName)"
-      ReportType="4"
-      OutputDir="$(RootBuildPath)\$(Configuration)"
-      XmlReportName="CodeCoverageSummary.xml"
-      HtmlReportName="CodeCoverageSummary.html"
-      ShowExcluded="true"
-      SatisfactoryCoverage="$(SatisfactoryCodeCoverage)"
-      MinimumCoverage="$(SatisfactoryCodeCoverage)"
-      FailMinimum="true"
-      FailCombinedMinimum="true"
-      CoverageFiles="$(RootBuildPath)\$(Configuration)\CodeCoverage.xml"
-      Exclusions="@(ExcludeCoverageReporting -> '&lt;CoverageExclusion&gt;&lt;ExclusionType&gt;%(Identity)&lt;/ExclusionType&gt;&lt;Pattern&gt;%(FilterExpression)&lt;/Pattern&gt;&lt;IsRegex&gt;true&lt;/IsRegex&gt;&lt;/CoverageExclusion&gt;', '')" />
-  </Target>
+        <Move SourceFiles="@(MetadataFile)" DestinationFolder="$(MetadataPath)" />
+        <Move SourceFiles="@(ReportingFile -> '$(RootBuildPath)\$(Configuration)\%(Identity)')" DestinationFolder="$(ReportingPath)" />
+    </Target>
 
-  <Target Name="LayoutOutputFiles">
-    <CreateItem Include="$(BinariesPath)\*.pdb;$(BinariesPath)\*.xml">
-      <Output TaskParameter="Include" ItemName ="MetadataFile" />
-    </CreateItem>
+    <Target Name="CorePackage" />
 
-    <MakeDir Directories="$(MetadataPath);$(ReportingPath)" />
+    <Target Name="Package" DependsOnTargets="@(PrePackageTargets);CorePackage;@(ChildPackageTargets);@(PostPackageTargets)" />
 
-    <Move SourceFiles="@(MetadataFile)" DestinationFolder="$(MetadataPath)" />
-    <Move SourceFiles="@(ReportingFile -> '$(RootBuildPath)\$(Configuration)\%(Identity)')" DestinationFolder="$(ReportingPath)" />
-  </Target>
-
-  <Target Name="CorePackage" />
-
-  <Target Name="Package" DependsOnTargets="@(PrePackageTargets);CorePackage;@(ChildPackageTargets);@(PostPackageTargets)" />
-
-  <Target Name="BuildLocal" DependsOnTargets="ValidateCodeCoverage;LayoutOutputFiles" />
-  <Target Name="BuildComplete" DependsOnTargets="BuildLocal;Package" />
+    <Target Name="BuildComplete" DependsOnTargets="UnitTest;@(PreLayoutOutputFilesTarget);LayoutOutputFiles;Package" />
 </Project>
