Renamed Cast to UnsafeCast; updated generic type names to TMetadata; MetadataResolver now uses a disambiguation method provided by derived classes to handle multiple bindings...

--- a/Application/iSynaptic.Commons.IL/iSynaptic.Commons.IL.csproj
+++ b/Application/iSynaptic.Commons.IL/iSynaptic.Commons.IL.csproj
@@ -32,13 +32,13 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Stubs\Cast.cs" />
+    <Compile Include="Stubs\UnsafeCast.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Cast.il" />
+    <None Include="UnsafeCast.il" />
     <None Include="CustomBuildEvents.targets">
       <SubType>Designer</SubType>
     </None>
