Implemented Guard class...

--- a/Testing/iSynaptic.Commons.UnitTests/iSynaptic.Commons.UnitTests.csproj
+++ b/Testing/iSynaptic.Commons.UnitTests/iSynaptic.Commons.UnitTests.csproj
@@ -80,6 +80,7 @@
     <Compile Include="AOP\UnitOfWorkTests.cs" />
     <Compile Include="ArrayIndexTests.cs" />
     <Compile Include="Collections\Generic\ProjectionCollectionTests.cs" />
+    <Compile Include="GuardTests.cs" />
     <Compile Include="UnsafeCastTests.cs" />
     <Compile Include="Collections\Generic\WeakDictionaryTests.cs" />
     <Compile Include="Collections\Generic\WeakDictionaryTestsBase.cs" />
@@ -113,7 +114,6 @@
     <Compile Include="Transactions\SimpleObject.cs" />
     <Compile Include="Transactions\TransactionalGatewayTests.cs" />
     <Compile Include="Transactions\TransactionalTests.cs" />
-    <Compile Include="UnitTestingExtensions.cs" />
     <Compile Include="WeakReferenceTests.cs" />
     <Compile Include="Xml\ProcessingInstructionParserTests.cs" />
   </ItemGroup>
