--- a/Application/iSynaptic.Commons.Data/iSynaptic.Commons.Data.csproj
+++ b/Application/iSynaptic.Commons.Data/iSynaptic.Commons.Data.csproj
@@ -44,13 +44,16 @@
     <Compile Include="IMetadataAttribute.cs" />
     <Compile Include="IMetadataBinding.cs" />
     <Compile Include="IMetadataBindingSource.cs" />
+    <Compile Include="IPredicateToBinding.cs" />
+    <Compile Include="IScopeToBinding.cs" />
+    <Compile Include="ISubjectPredicateToBinding.cs" />
+    <Compile Include="IToBinding.cs" />
     <Compile Include="MetadataBinding.cs" />
     <Compile Include="MetadataBindingModule.cs" />
     <Compile Include="SurrogateMetadataBindingSource.cs" />
     <Compile Include="SurrogateMetadataBindingSourceAttribute.cs" />
     <Compile Include="MetadataRequest.cs" />
     <Compile Include="MetadataResolver.cs" />
-    <Compile Include="ModuleMetadataBindingSource.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StandardMetadataResolver.cs" />
   </ItemGroup>
