--- a/Application/iSynaptic.Commons.IL/CustomBuildEvents.targets
+++ b/Application/iSynaptic.Commons.IL/CustomBuildEvents.targets
@@ -1,15 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-    <ItemGroup>
-        <ILFile Include="**\*.il" />
-    </ItemGroup>
-    
-    <Target Name="BeforeBuild">
-    </Target>
-    
-    <Target Name="AfterBuild">
-        <Delete Files="$(OutputPath)\iSynaptic.Commons.IL.dll;$(OutputPath)\iSynaptic.Commons.IL.pdb" />
-        <Exec Command="$(MSBuildBinPath)\ilasm @(ILFile -> '&quot;%(Identity)&quot;', ' ') &quot;/out=$(OutputPath)\iSynaptic.Commons.IL.dll&quot; /dll"
-              WorkingDirectory="$(MSBuildProjectDirectory)" />
-    </Target>
+  <ItemGroup>
+    <ILFile Include="Manifest.il" />
+    <ILFile Include="**\*.il" Exclude="Manifest.il" />
+  </ItemGroup>
+
+  <Target Name="BeforeBuild">
+    <Delete
+      Condition="Exists('$(OutputPath)\iSynaptic.Commons.IL.Stub.dll')"
+      Files="$(OutputPath)\iSynaptic.Commons.IL.Stub.dll" />
+  </Target>
+
+  <Target Name="AfterBuild">
+    <Copy SourceFiles="$(OutputPath)\iSynaptic.Commons.IL.dll"
+          DestinationFiles="$(OutputPath)\iSynaptic.Commons.IL.Stub.dll" />
+
+    <Delete Files="$(OutputPath)\iSynaptic.Commons.IL.dll;$(OutputPath)\iSynaptic.Commons.IL.pdb" />
+    <Exec Command="$(MSBuildBinPath)\ilasm @(ILFile -> '&quot;%(Identity)&quot;', ' ') &quot;/out=$(OutputPath)\iSynaptic.Commons.IL.dll&quot; /dll"
+          WorkingDirectory="$(MSBuildProjectDirectory)" />
+  </Target>
 </Project>
