--- a/Application/iSynaptic.Commons.IL/iSynaptic.Commons.IL.csproj
+++ b/Application/iSynaptic.Commons.IL/iSynaptic.Commons.IL.csproj
@@ -32,13 +32,13 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Stubs\UnsafeCast.cs" />
+    <Compile Include="Stubs\Cast.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="UnsafeCast.il" />
+    <None Include="Cast.il" />
     <None Include="CustomBuildEvents.targets">
       <SubType>Designer</SubType>
     </None>
