--- a/Application/iSynaptic.Commons/iSynaptic.Commons.csproj
+++ b/Application/iSynaptic.Commons/iSynaptic.Commons.csproj
@@ -64,6 +64,11 @@
     <Compile Include="..\..\CommonAssemblyInfo.cs">
       <Link>Properties\CommonAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="ActionExtensions.generated.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ActionExtensions.tt</DependentUpon>
+    </Compile>
     <Compile Include="AOP\DisposableContext.cs" />
     <Compile Include="AOP\IEnlistmentScope.cs" />
     <Compile Include="AOP\IUnitOfWork.cs" />
@@ -101,7 +106,7 @@
     <Compile Include="Collections\Generic\DictionaryExtensions.cs" />
     <Compile Include="Equatable.cs" />
     <Compile Include="ExceptionExtensions.cs" />
-    <Compile Include="FuncExtensions1.cs">
+    <Compile Include="FuncExtensions.generated.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>FuncExtensions.tt</DependentUpon>
@@ -163,9 +168,13 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <None Include="ActionExtensions.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>ActionExtensions.generated.cs</LastGenOutput>
+    </None>
     <None Include="FuncExtensions.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>FuncExtensions1.cs</LastGenOutput>
+      <LastGenOutput>FuncExtensions.generated.cs</LastGenOutput>
     </None>
   </ItemGroup>
   <ItemGroup>
