--- a/Application/iSynaptic.Commons/iSynaptic.Commons.csproj
+++ b/Application/iSynaptic.Commons/iSynaptic.Commons.csproj
@@ -79,8 +79,10 @@
     <Compile Include="AOP\UnitOfWork.cs" />
     <Compile Include="ArrayIndex.cs" />
     <Compile Include="Collections\Generic\BaseDictionary.cs" />
+    <Compile Include="Collections\Generic\BaseReadOnlyDictionary.cs" />
     <Compile Include="Collections\Generic\BaseWeakDictionary.cs" />
     <Compile Include="Collections\Generic\IWeakDictionary.cs" />
+    <Compile Include="Collections\Generic\LazyDictionary.cs" />
     <Compile Include="Collections\Generic\ProjectionCollection.cs" />
     <Compile Include="Collections\Generic\ReadOnlyDictionary.cs" />
     <Compile Include="Collections\Generic\SmartLoop.cs" />
@@ -88,8 +90,8 @@
     <Compile Include="Collections\Generic\WeakKeyDictionary.cs" />
     <Compile Include="Collections\Generic\WeakValueDictionary.cs" />
     <Compile Include="DataEventArgs.cs" />
-    <Compile Include="Data\IMetadataDeclaration.cs" />
     <Compile Include="Data\IMetadataResolver.cs" />
+    <Compile Include="Data\LazyMetadata.cs" />
     <Compile Include="Data\Metadata.cs" />
     <Compile Include="Data\MetadataDeclaration.cs" />
     <Compile Include="Data\MetadataDeclarations\GuidMetadataDeclaration.cs" />
